# project-Jarvis

./: README.md
project_jarvis/: README.md  pyproject.toml
project_jarvis/project_jarvis/: .env  requirements.txt
project_jarvis/project_jarvis/autodesk/: app.py  requirements.txt
project_jarvis/project_jarvis/autodesk/bots/: __init__.py  assistant.py  utils.py
project_jarvis/project_jarvis/autodesk/rag_process/: response_process.py  retrieval_clients.py
project_jarvis/project_jarvis/data_engineering/: base_data_extraction.py  data_ingestion.py  requirements.txt
project_jarvis/project_jarvis/data_engineering/preprocess/: blobmanager.py  embeddings.py  filestrategy.py  htmlparser.py  integratedvectorizerstrategy.py  listfilestrategy.py  searchmanager.py  strategy.py  textsplitter.py
project_jarvis/project_jarvis/rag_evaluation/: Evaluation_answers_base_search.csv  Evaluation_answers_hybrid.csv  dev_qna_data.csv  llm_evaluation_main.ipynb  requirements.txt
