[tool.poetry]
name = "project-autodesk"
version = "0.1.0"
description = "Assistant for Information Retrieval over HTML pages"
authors = ["Arkymluthor <57032840+Arkymluthor@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
azure-storage-blob = "^12.19.1"
aiohttp = "^3.9.3"
azure-identity = "^1.15.0"
azure-search-documents = "^11.4.0"
beautifulsoup4 = "^4.12.3"
botbuilder-core = "^4.14.8"
datasets = "^2.18.0"
fitz = "^0.0.1.dev2"
ipykernel = "^6.29.3"
langchain = "^0.1.11"
langchain-community = "^0.0.27"
langchain-core = "^0.1.30"
langchain-openai = "^0.0.8"
nest-asyncio = "^1.6.0"
openai = "^1.13.3"
numpy = "^1.26.4"
pandas = "^2.2.1"
pillow = "^10.2.0"
pypdf = "^4.1.0"
python-dotenv = "^1.0.1"
ragas = "^0.1.3"
tenacity = "^8.2.3"
tiktoken = "^0.6.0"
typing-extensions = "^4.9.0"
python-magic-bin = "^0.4.14"
unstructured = "^0.12.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
